--- a/src/assets/_header.scss
+++ b/src/assets/_header.scss
@@ -24,7 +24,7 @@ a.consult-chat{
 	color: $linkinatorColorBlue;
 	text-decoration: underline;
 	font-weight: 600;
-	flex-basis:30%;
+	flex-basis: 35%;
 	&:hover{
 		text-decoration: none;
 		color: $linkinatorColorYellow;
@@ -34,7 +34,7 @@ a.consult-chat{
 	font-size: $fontSizeTitle;
 	font-weight: 600;
 	margin-right: 40px;
-	flex-basis:10%;
+	flex-basis: 15%;
 	> i{
 		padding-right: 5px;
 		color: $linkinatorColorYellow;
@@ -51,14 +51,16 @@ a.consult-chat{
 	font-size: $fontSizeTitle;
 	font-weight: 600;
 	margin-right: 100px;
-	flex-basis:15%;
+	flex-basis: 18%;
 	
 	&:hover{
 		color: $linkinatorColorYellow;
 	}
 }
+
 .search{
 	cursor: pointer;
+	padding: 0px 5px;
 }
 ._icon-search{
 	font-size: $fontSizeTitle;
