--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -7,38 +7,6 @@ $linkinatorColorBlue: #267bae;
 $linkinatorColorOrange: #ff9626;
 $linkinatorColorYellow: #ffca08;
 
-body {
-	padding: 0px 15px;
-   margin: 0 auto;
-	max-width: $maxWidthContainer + 30px;
-	font-family: $fontFamily;
-	font-size: $fontSize;
-	color: $mainColor;
-	font-weight: 400;
-	letter-spacing: normal;
-	line-height: 1;
-	text-align: left;
-}
-// ========== блоки повторного використання ======
-.title{
-	font-size: $fontSizeTitle;
-	line-height: 25px;
-	font-weight: 700;
-	letter-spacing: 0.1;
-}
-//==================
-
-.wrapper{
-	min-height: 100%;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
-	> main {
-		flex: 1 1 auto;
-	}
-}
-
 .services-section {
 	display: flex;
 	flex-wrap: wrap;
@@ -73,27 +41,14 @@ body {
 				&:hover{
 					color: $linkinatorColorOrange;
 				}
-				&::after{
-					content: "";
-					display: inline-block;
-					height: 16px;
-					width: 10px;
-					background: url("../img/icons-svg/icon-arrow.svg")0 0 no-repeat;
-					top: 26%;
-					left: 0;
-					position: absolute;
-					margin-left: 95%;
-				}
 			}
 			
 		}
 	}
 }
-// .icon-list::before{
-// 	content: "";
-// 	color: #267bae;
-// 	display: inline-block;
-// 	height: 18px;
-// 	width: 18px;
-// 	background: url("../img/iconsfont/icon-list.svg")0 0 no-repeat;
-// }
+._icon-angle-right{
+	margin-left: 95%;
+	position: absolute;
+	top: 27%;
+	left: 0;
+}
