--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -19,6 +19,10 @@ body {
 	text-align: left;
 }
 
+[class*="__container"]{
+	color: #ffca08;
+}
+
 //==================
 
 .wrapper{
@@ -34,7 +38,7 @@ body {
 // ========== блоки повторного використання ======
 .title{
 	font-size: $fontSizeTitle;
-	line-height: 25px;
+	line-height: 60%;
 	font-weight: 700;
 	letter-spacing: 0.1;
 }
