--- a/src/assets/_header.scss
+++ b/src/assets/_header.scss
@@ -5,6 +5,8 @@ $fontSizeTitle: 20px;
 
 .main-header{
 	min-height: 145px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	&__wrapper{
 		display: flex;
 		align-items: flex-end;
