--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -1,4 +1,4 @@
-$maxWidthContainer: 1263;
+$maxWidthContainer: 1260;
 $fontFamily: "Open Sans";
 $fontSize: 15px;
 $fontSizeTitle: 20px;
@@ -7,48 +7,110 @@ $linkinatorColorBlue: #267bae;
 $linkinatorColorOrange: #ff9626;
 $linkinatorColorYellow: #ffca08;
 
-.services-section {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	margin: 20px 0px;
+//========= FOAT ================
+.services-section{
+	margin: 0 -27px;
+	margin-bottom: 30px;
+	&::after{
+		content: "";
+		clear: both;
+		display: block;
+	}
+
 }
 
 .linkinator {
-	flex: 0 1 30%;
+	float: left;
+	margin: 0px 27px;
+
+	// margin-right: 54px;
+	min-width: 380px;
+	min-height: 335px;
 	box-shadow: 0 0 4px rgba(7, 88, 145, 0.09);
 	border: 1px solid #d7dcdf;
-	
-	&-header {
-		background-color: #f9f9f9;
-		padding: 20px 22px;
-		text-decoration: underline;
-	}
-	&-body {
-		margin: 17px 40px 17px 23px;
-		color: $linkinatorColorBlue;
-		> li{
-			padding: 10px 0px;
-			border-bottom: 1px solid #d7dcdf;
-			position: relative;
-			&:last-child{
-				border-bottom: none;
-			}
-			> a{
-				> i{
-					padding-right: 12px;
+		&-header {
+			background-color: #f9f9f9;
+			padding: 20px 22px;
+			text-decoration: underline;
+		}
+		&-body {
+			color: $linkinatorColorBlue;
+			> li{
+				padding: 17px 24px 0px 17px;
+				&:last-child a{
+					border-bottom: none;
 				}
 				&:hover{
-					color: $linkinatorColorOrange;
+					background-color: aliceblue;
 				}
+				> a{
+					border-bottom: 1px solid #d7dcdf;
+	   			display: block;
+	   			padding-bottom: 10px;
+					position: relative;
+					
+					> i{
+						padding-right: 12px;
+					}
+					&:hover{
+						color: $linkinatorColorOrange;
+					}
+				}
+				
 			}
-			
 		}
 	}
-}
+
+
+
+
+//========== ФЛЕКС ============
+//.services-section {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	justify-content: space-between;
+// 	margin: 20px 0px;
+// }
+
+// .linkinator {
+// 	flex: 0 1 30%;
+// 	box-shadow: 0 0 4px rgba(7, 88, 145, 0.09);
+// 	border: 1px solid #d7dcdf;
+	
+// 	&-header {
+// 		background-color: #f9f9f9;
+// 		padding: 20px 22px;
+// 		text-decoration: underline;
+// 	}
+// 	&-body {
+// 		color: $linkinatorColorBlue;
+// 		> li{
+// 			padding: 17px 24px 0px 17px;
+// 			&:last-child a{
+// 				border-bottom: none;
+// 			}
+// 			&:hover{
+// 				background-color: aliceblue;
+// 			}
+// 			> a{
+// 				border-bottom: 1px solid #d7dcdf;
+//    			display: block;
+//    			padding-bottom: 10px;
+// 				position: relative;
+				
+// 				> i{
+// 					padding-right: 12px;
+// 				}
+// 				&:hover{
+// 					color: $linkinatorColorOrange;
+// 				}
+// 			}
+			
+// 		}
+// 	}
+// }
 ._icon-angle-right{
-	margin-left: 95%;
 	position: absolute;
-	top: 27%;
-	left: 0;
+   top: 3px;
+   right: -7px;
 }
