hero block,  benefits-section, about-project, part footer block

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -7,9 +7,6 @@ $mainColor: #000000;
 
 
 body {
-	padding: 0px 15px;
-   margin: 0 auto;
-	max-width: $maxWidthContainer + 30px;
 	font-family: $fontFamily;
 	font-size: $fontSize;
 	color: $mainColor;
@@ -24,7 +21,11 @@ body {
 }
 
 //==================
-
+._conteiner{
+	padding: 0px 15px;
+   margin: 0 auto;
+	max-width: $maxWidthContainer + 30px;
+}
 .wrapper{
 	min-height: 100%;
 	width: 100%;
@@ -41,4 +42,7 @@ body {
 	line-height: 60%;
 	font-weight: 700;
 	letter-spacing: 0.1;
+}
+.text-size{
+	font-weight: 500;
 }
