--- a/src/assets/_header.scss
+++ b/src/assets/_header.scss
@@ -15,6 +15,9 @@ $fontSizeTitle: 20px;
 		margin-top: 10px;
 	}
 }
+
+// flex: 0 0 494/1240 * 100%; - сторюємо ширину у відсотках
+
 .element_1{
 	margin-right: 5px;
 	flex: 1 40px;
@@ -31,14 +34,11 @@ $fontSizeTitle: 20px;
 	margin-right: 5px;
 	flex: 1 100px;
 }
-.element_5{}
 
 .brand-logo{
 	cursor: pointer;
 }
-.consult-chat{
-	// margin-right: 15%;
-}
+
 ._icon-chat{
 	font-size: $fontSizeTitle;
 	color: $linkinatorColorYellow;
@@ -60,6 +60,11 @@ a.link-consult-chat{
 	> ._icon-phone{
 		padding-right: 5px;
 		color: $linkinatorColorYellow;
+	}
+	._icon-arrow-down-2{
+		&:hover{
+			color: $linkinatorColorYellow;
+		}
 	}
 	&:hover{
 		color: $linkinatorColorYellow;
