--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -7,23 +7,79 @@ $linkinatorColorBlue: #267bae;
 $linkinatorColorOrange: #ff9626;
 $linkinatorColorYellow: #ffca08;
 
+//==========hero-block=======
+
+.hero-block {
+	background: url("../img/hero-block.jpg") no-repeat 0 0;
+	width: 100%;
+	height: 70uv;
+	padding-top: 20px;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+	.hero-block-nav {
+		background-color: #000;
+		opacity: 0.75;
+		color: #ffffff;
+		padding: 0px 10px;
+		margin: 0px 20px 20px 20px;
+		min-width: 364px;
+		display: flex;
+		flex-direction: column;
+		li{
+			padding: 30px 10px 30px 10px;
+			&:not(:last-of-type){
+			border-bottom: 0.5px solid #585858;
+			}
+			&:hover{
+				color: $linkinatorColorYellow;
+			}
+			a{
+				position: relative;
+				font-size: 20px;
+				margin-left: 60px;
+				i{
+					position: absolute;
+					left: -55px;
+					top: -3px;  
+					margin-right: 25px;
+					font-size: 35px;
+					line-height: 1;
+				}
+			}
+		}
+	}
+	p{
+		margin-top: 60px;
+		flex: 0 0 42%;
+		color: #000000;
+		font-size: 31px;
+		font-weight: 300;
+		line-height: 54px;
+		opacity: 0.9;
+	}
+	.text-background{
+		display: inline-block;
+		padding: 0px 10px;	
+		background-color: $linkinatorColorYellow;
+		&:not(:last-of-type){
+			margin-bottom: 5px;
+		}
+	}
+}
+
 //========= FOAT ================
 .services-section{
-	margin: 0 -27px;
-	margin-bottom: 30px;
+	margin: 0px -21px 30px -21px;
 	&::after{
 		content: "";
 		clear: both;
 		display: block;
 	}
-
 }
-
 .linkinator {
 	float: left;
-	margin: 0px 27px;
-
-	// margin-right: 54px;
+	margin: 10px 27px;
 	min-width: 380px;
 	min-height: 335px;
 	box-shadow: 0 0 4px rgba(7, 88, 145, 0.09);
@@ -60,7 +116,71 @@ $linkinatorColorYellow: #ffca08;
 			}
 		}
 	}
+._icon-angle-right{
+	position: absolute;
+   top: 3px;
+   right: -7px;
+}
 
+//=================
+
+.benefits-section {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
+	.benefits-body {
+		margin-top: 40px;
+		margin-bottom: 35px;
+		.title{
+			margin-bottom: 20px;
+		}
+		li{
+		font-weight: 300;
+			&:not(:last-of-type){
+				margin-bottom: 20px;
+			}
+		}
+		i{
+			color: $linkinatorColorYellow;
+			padding-right: 12px;
+		}
+	}
+	.benefits-text {
+		background-image: url('../img/text-block.jpg');
+		width: 726px;
+		height: 239px;
+		flex: 0 0 57.6%;
+		display: flex;
+		justify-content: center;
+		span{
+			display: inline-block;
+			text-align: center;
+			align-self: center;
+			padding: 5px 20px;
+			font-size: 25px;
+			font-weight: 300;
+			background-color: $linkinatorColorYellow;
+			opacity: 0.9;
+		}
+	}
+}
+
+//=================
+
+.about-project{
+	max-width: 790px;
+	margin-bottom: 68px;
+	.title{
+		margin-bottom: 14px;
+	}
+	p{
+		font-weight: 500;
+		line-height: 25px;
+		&:not(:last-of-type){
+			margin-bottom: 14px;
+		}
+	}
+}
 
 
 
@@ -109,8 +229,3 @@ $linkinatorColorYellow: #ffca08;
 // 		}
 // 	}
 // }
-._icon-angle-right{
-	position: absolute;
-   top: 3px;
-   right: -7px;
-}
