--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -4,45 +4,18 @@ $fontSize: 15px;
 $fontSizeTitle: 20px;
 $mainColor: #000000;
 
-
-
-body {
-	font-family: $fontFamily;
-	font-size: $fontSize;
-	color: $mainColor;
-	font-weight: 400;
-	letter-spacing: normal;
-	line-height: 1;
-	text-align: left;
-}
-
-[class*="__container"]{
-	color: #ffca08;
-}
-
-//==================
+// ========== блоки повторного використання ======
 ._conteiner{
 	padding: 0px 15px;
    margin: 0 auto;
 	max-width: $maxWidthContainer + 30px;
 }
-.wrapper{
-	min-height: 100%;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
-	> main {
-		flex: 1 1 auto;
-	}
-}
-// ========== блоки повторного використання ======
 .title{
 	font-size: $fontSizeTitle;
 	line-height: 60%;
 	font-weight: 700;
 	letter-spacing: 0.1;
 }
-.text-size{
+.text-weight{
 	font-weight: 500;
 }
