--- a/src/assets/_footer.scss
+++ b/src/assets/_footer.scss
@@ -8,18 +8,9 @@ $linkinatorColorYellow: #ffca08;
 .footer-wrapper{
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	margin-top: 35px;
 	margin-bottom: 50px;
-	.footer-nav{
-		ul{
-			display: flex;
-			li{
-				padding: 13px 19px;
-				font-size: 17px;
-				line-height: 20px;
-			}
-		}
-	}
 	.footer-links{
 		display: flex;
 		flex-direction: column;
@@ -34,6 +25,7 @@ $linkinatorColorYellow: #ffca08;
 			}
 			&:hover{
 				color: $linkinatorColorBlue;
+				transition: transform 0.3s ease 0s;
 			}
 		}
 		.footer-link-email{
@@ -41,6 +33,7 @@ $linkinatorColorYellow: #ffca08;
 			color: $linkinatorColorBlue;
 			&:hover{
 				color: $linkinatorColorYellow;
+				transition: transform 0.3s ease 0s;
 			}
 		}
 		.footer-link-cellphone{
@@ -50,6 +43,7 @@ $linkinatorColorYellow: #ffca08;
 			text-decoration: none;
 			&:hover{
 				color: $linkinatorColorBlue;
+				transition: transform 0.3s ease 0s;
 			}
 		}
 		._icon-phone{
@@ -80,6 +74,11 @@ $linkinatorColorYellow: #ffca08;
 			color: #787878;
 			padding: 8px;
 			line-height: 30px;
+			&:hover{
+				box-shadow: 0 0 2px rgba(250, 230, 6, 0.64);
+				border: 1px solid #cbcb20;
+				transition: transform 0.3s ease 0s;
+			}
 		}
 		.form-button{
 			min-width: 269px;
@@ -97,6 +96,7 @@ $linkinatorColorYellow: #ffca08;
 			align-items: center;
 			&:hover{
 				background-color: $linkinatorColorYellow;
+				transition: transform 0.3s ease 0s;
 			}
 		}
 		.footer-subtext{
@@ -114,10 +114,103 @@ $linkinatorColorYellow: #ffca08;
 				}
 				&:hover{
 					color: $linkinatorColorBlue;
+					transition: transform 0.3s ease 0s;
 				}
 			}
 			color: #bdbdbd;
 			font-size: 30px;
 		}
+	}
+}
+
+.footer-nav{
+	max-width: 517px;
+}
+.tabs {
+}
+.tabs-items {
+	display: flex;
+}
+.tabs-item {
+	flex: 0 1 25%;
+	height: 40px;
+	padding: 13px 19px;
+	color: #000000;
+	font-size: 17px;
+	line-height: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	span{
+		position: relative;
+		z-index: 2;
+	}
+}
+.tabs-body {
+}
+.tabs-block {
+	position: relative;
+	display: none;
+	&::before{
+		content: "";
+		height: 40px;
+		width: 25%;
+		position: absolute;
+		top: -40px;
+	}
+	&:nth-child(1)::before	{
+		left: 0;
+		border: 1px solid #d8d8d8;
+		background-color: #ffffff;
+		opacity: 0.65;
+	}
+	&:nth-child(2)::before	{
+		left: 25%;
+		border: 1px solid #d8d8d8;
+		background-color: #ffffff;
+		opacity: 0.65;
+	}
+	&:nth-child(3)::before	{
+		left: 50%;
+		border: 1px solid #d8d8d8;
+		background-color: #ffffff;
+		opacity: 0.65;
+	}
+	&:nth-child(4)::before	{
+		right: 0%;
+		border: 1px solid #d8d8d8;
+		background-color: #ffffff;
+		opacity: 0.65;
+	}
+	&:nth-child(1),
+	&:nth-child(2),
+	&:nth-child(3),
+	&:nth-child(4)	{
+		border: 1px solid #d8d8d8;
+		background-color: #ffffff;
+		opacity: 0.65;
+	}
+	&:target{
+		display: block;
+		border: 1px solid #d8d8d8;
+		background-color: #ffffff;
+		opacity: 0.65;
+	}
+}
+.tabs-block-wrapper{
+	display: flex;
+	padding: 10px 15px;
+}
+.tabs-block-link a{
+	display: inline-block;
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 173%;
+	text-decoration: underline;
+	color: $linkinatorColorBlue;
+	padding: 10px 15px;
+	&:hover{
+		color: $linkinatorColorYellow;
+		transition: transform 0.3s ease 0s;
 	}
 }
